--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="https://rashidmrck.github.io/pillsbee_distributor/">
-  <!-- <base href="/"> -->
+  <!-- <base href="https://rashidmrck.github.io/pillsbee_distributor/"> -->
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -35,7 +35,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '2638845337';
+    var serviceWorkerVersion = '4029959311';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
