--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <!-- <base href="https://rashidmrck.github.io/pillsbee_distributor/"> -->
-  <base href="/">
+  <base href="https://rashidmrck.github.io/pillsbee_distributor/">
+<!--   <base href="/"> -->
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
